--- a/k8s/charts/meerkat-dsa/values.yaml
+++ b/k8s/charts/meerkat-dsa/values.yaml
@@ -119,6 +119,7 @@ enable_dop: true
 enable_dsp: true
 entries_per_subordinates_page: 100
 fetch_remote_authz_attrs: true
+follow_referral_ttl: 0
 forbid_anonymous_bind: false
 get_clearances_from_attr_certs: true
 get_clearances_from_dsait: true
