test(meerkat): one db and one migration for all tests

--- a/apps/meerkat/tsconfig.app.json
+++ b/apps/meerkat/tsconfig.app.json
@@ -24,7 +24,8 @@
         "src/**/*.test.js",
         "src/**/*.spec.js",
         "src/**/*.test.jsx",
-        "src/**/*.spec.jsx"
+        "src/**/*.spec.jsx",
+        "test/**/*",
     ],
     "include": ["**/*.ts"]
 }
