feat(meerkat): make log file buffer size configurable

--- a/k8s/charts/meerkat-dsa/templates/config.yaml
+++ b/k8s/charts/meerkat-dsa/templates/config.yaml
@@ -77,6 +77,7 @@ data:
   local_qualifier_points_for_using_tls_1_3: {{ .Values.local_qualifier_points_for_using_tls_1_3 | quote }}
   {{- if .Values.log_file }}
   log_file: {{ .Values.log_file | quote }}
+  log_file_buffer_size: {{ .Values.log_file_buffer_size | default 8192 | quote }}
   log_file_max_size: {{ .Values.log_file_max_size | default 1000000 | quote }}
   log_file_max_files: {{ .Values.log_file_max_files | default 100 | quote }}
   log_tailable: {{ .Values.log_tailable | ternary 1 0 | quote }}
