--- a/k8s/charts/meerkat-dsa/templates/statefulset.yaml
+++ b/k8s/charts/meerkat-dsa/templates/statefulset.yaml
@@ -444,6 +444,12 @@ spec:
                   name: {{ include "meerkat-dsa.fullname" . }}-config
                   key: log_bound_dn
                   optional: true
+            - name: MEERKAT_LOG_FILE_BUFFER_SIZE
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "meerkat-dsa.fullname" . }}-config
+                  key: log_file_buffer_size
+                  optional: true
             - name: MEERKAT_LOG_JSON
               valueFrom:
                 configMapKeyRef:
